[package]
name = "lan_data_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
crossterm = "0.7"
rdev = { version = "0.5", features = ["unstable_grab"] }
enigo = "0.2"
lazy_static = "1.4"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef", "winnt", "wincon", "handleapi", "consoleapi", "processenv", "winbase"] }

